--- a/.github/workflows/LotDividerAPI.yml
+++ b/.github/workflows/LotDividerAPI.yml
@@ -30,6 +30,9 @@ jobs:
         with:
           python-version: 3
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      
       # Build stack
       - name: Build Stack
         run: docker-compose up -d
