--- a/.github/workflows/LotDividerAPI.yml
+++ b/.github/workflows/LotDividerAPI.yml
@@ -34,8 +34,12 @@ jobs:
       - name: Start virtual environment (python 3)
         run: |
           python3 -m pip install --user virtualenv
-          python3 -m venv env
-          source env/bin/activate
+
+      - name: Install virtual environment
+        run: python3 -m venv env
+        
+      - name: run virtual environment
+        run: source env/bin/activate
       
       # Build stack
       - name: Build Stack
