--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,22 @@ services:
             - mysql:/var/lib/mysql
             - mysql_config:/etc/mysql
     web:
-        build: .
+        build: 
+            context: .
         command: python manage.py runserver 0.0.0.0:8000
         volumes:
             - ./:/app
         ports:
-            - "8000:8000"
+            - 8000:8000
         depends_on:
             - db
+    test:
+        build:
+            context: .
+        depends_on: 
+            - db
+            - web
+        command: python manage.py test LotDividerAPI
 volumes:
     mysql:
     mysql_config:
