--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         ports:
             - 3306:3306
         environment:
-            - MYSQL_ROOT_PASSWORD="${MYSQL_ROOT_PASSWORD}"
+            - MYSQL_ROOT_PASSWORD="root"
         volumes:
             - mysql:/var/lib/mysql
             - mysql_config:/etc/mysql
