--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,14 @@ djangorestframework==3.12.4
 idna==2.10
 lxml==4.6.3
 multitasking==0.0.9
-mysqlclient==2.0.3
 numpy==1.20.2
 oauthlib==3.1.0
 pandas==1.2.4
+protobuf==3.15.8
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.1.0
+PyMySQL==1.0.2
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.5
