--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,16 @@ services:
         volumes:
             - mysql:/var/lib/mysql
             - mysql_config:/etc/mysql
-    web:
-        build: 
-            context: .
-        command: python manage.py runserver 0.0.0.0:8000
-        volumes:
-            - ./:/app
-        ports:
-            - 8000:8000
-        depends_on:
-            - db
+    # web:
+    #     build: 
+    #         context: .
+    #     command: python manage.py runserver 0.0.0.0:8000
+    #     volumes:
+    #         - ./:/app
+    #     ports:
+    #         - 8000:8000
+    #     depends_on:
+    #         - db
     # test:
     #     build:
     #         context: .
