--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ Django==2.2.4
 django-allauth==0.44.0
 django-cors-headers==3.7.0
 django-debug-toolbar==3.2
-django-mysql==3.11.1
+django-environ==0.4.5
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
+gunicorn==20.1.0
 idna==2.10
 lxml==4.6.3
 multitasking==0.0.9
@@ -22,8 +23,8 @@ protobuf==3.15.8
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.1.0
-PyMySQL==1.0.2
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 python3-openid==3.2.0
 pytz==2020.5
 requests==2.25.1
